<resources>
    <string name="app_name">Snake</string>
    <string name="start_menu_item">Start</string>
    <string name="top">⬆</string>
    <string name="bottom">⬇</string>
    <string name="right">➡</string>
    <string name="left">⬅</string>
    <string name="win">Win!</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="add_your_highscore">ADD YOUR HIGHSCORE</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game">Game</string>
    <string name="snake">Snake</string>
    <string name="welcome_description">Welcome to snake, click the play button to start playing the game</string>
    <string name="play_game">PLAY GAME</string>
    <string name="score">SCORE</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="player_name">Player Name</string>
    <string name="send_highscore">Send highscore</string>
    <string name="ia_score">IA Score</string>
    <string name="win_against_ia">You win against IA</string>
</resources>
